	* Fixed error 38 when writing cash shop error ERROR_OUT_OF_STOCK.
	* Implemented buying items with mesos in cash shop.

2013-08-13  GoldenKevin  (revision 231)

	* Check recipient name when sending gifts.
	* Gift recipients logged into the cash shop will see newly received gifts in
	their staging.
	* Implement buying and gifting packages.

2013-08-16  GoldenKevin  (revision 232)

	* Fixed expire dates of pets bought in the cash shop.
	* Commodity overrides now override commodities server side as well.
	* Implemented expire cash items in cash shop. Implemented expire cash items
	and expirable quest items in a channel.

2013-08-16  GoldenKevin  (revision 233)

	* Cancel item expire task in ShopCharacter and GameCharacter on disconnect
	to prevent memory leaks and to tidy up the scheduler queue.
	* Fixed cooldown persistence and canceling in ShopCharacter. Removed
	unneeded packet for players in shop server.

2013-08-17  GoldenKevin  (revision 234)

	* Fixed pet expiration packets.
	* Removed unneeded column in `inventorypets` table.
	* Spawn and remove pets by double clicking the inventory item.

2013-08-17  GoldenKevin  (revision 235)

	* Fixed first item on expire queue not being expired.

2013-08-18  GoldenKevin  (revision 236)

	* Fixed crash when dropping spawned pets.
	* Fixed pets not appearing when changing maps.
	* Implemented pet movement map packets.
	* Implemented Meso Magnet and Item Pouch.
	* Implemented pet auto potion.

2013-08-18  GoldenKevin  (revision 237)

	* Implemented packets for pet auto potion.
	* Implemented pet loot item ignore.

2013-08-22  GoldenKevin  (revision 238)

	* Use early out for-loops when iterating over enabled pets.
	* Implemented pet fullness schedule.
	* Implemented pet food.
	* Implemented pet commands.

Copyright 2011-2013 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.